--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,8 @@
-# Esempio di file .env
-# Copia questo file come .env e inserisci i tuoi valori
+# Example .env file
+# Copy this file to .env and enter your values
 
-# Token del tuo bot Discord (OBBLIGATORIO)
+# Your Discord bot token (REQUIRED)
 DISCORD_BOT_TOKEN=your_discord_bot_token_here
 
-# ID del canale di testo dove inviare le notifiche (OBBLIGATORIO)
+# ID of the text channel where to send notifications (REQUIRED)
 TEXT_CHANNEL_ID=1234567890123456789
-
-# Configurazioni opzionali
-# PORT=5000
